website/content/docs/0.7/user-guide/browsing-and-navigation/keyboard-navigation-and-shortcuts/index.md
+++
title = "Keyboard Navigation and Shortcuts"
description = "Understand Sambee's keyboard-first design and use the main file list, viewers, dual-pane layout, and Markdown editor efficiently from the keyboard."
+++

Keyboard navigation is a first-class part of Sambee's product design, not a secondary convenience layer.

The main file browser, dual-pane workflows, viewers, and Markdown editing all support keyboard-driven use so you can keep moving without constantly switching back to the pointer.

## Keyboard-First Principles

- focus matters: shortcuts act on the file list, pane, dialog, or viewer that currently has focus
- the active pane matters: in dual-pane mode, many browser commands target the currently active pane
- important actions stay discoverable: the same actions are also available through visible controls and the in-app shortcuts help
- safety still wins: shortcuts that would be unsafe in text fields, dialogs, or incompatible states are intentionally blocked

If you want the live in-app list, press <kbd>?</kbd> while using Sambee.

## File List and Main Browser UI

Use these shortcuts when the main file list or browser shell has focus.

| Shortcut | What it does |
| --- | --- |
| <kbd>Up</kbd> / <kbd>Down</kbd> | Move to the previous or next row in the current file list |
| <kbd>Home</kbd> / <kbd>End</kbd> | Jump to the first or last visible item |
| <kbd>Page Up</kbd> / <kbd>Page Down</kbd> | Move up or down by a page in the current list |
| <kbd>Enter</kbd> | Open the focused file or enter the focused directory |
| <kbd>Backspace</kbd> | Go up to the parent directory |
| <kbd>Ctrl</kbd> + <kbd>Down</kbd> | Open the connection selector |
| <kbd>Ctrl</kbd> + <kbd>K</kbd> | Open smart navigation |
| <kbd>Ctrl</kbd> + <kbd>Alt</kbd> + <kbd>F</kbd> | Filter the current directory in the active pane |
| <kbd>Ctrl</kbd> + <kbd>P</kbd> / <kbd>F1</kbd> | Open commands |
| <kbd>Ctrl</kbd> + <kbd>,</kbd> | Open settings |
| <kbd>?</kbd> | Show keyboard shortcuts help |
| <kbd>Ctrl</kbd> + <kbd>R</kbd> | Refresh the current file list |
| <kbd>F2</kbd> | Rename the focused item |
| <kbd>Del</kbd> | Delete the focused item |
| <kbd>F7</kbd> | Create a new directory |
| <kbd>Shift</kbd> + <kbd>F7</kbd> | Create a new file |
| <kbd>Ctrl</kbd> + <kbd>Enter</kbd> | Open the focused file in the companion app |

## Selection and Dual-Pane Workflows

These shortcuts matter most when you are working keyboard-first across one or two panes.

| Shortcut | What it does |
| --- | --- |
| <kbd>Ins</kbd> or <kbd>Space</kbd> | Toggle selection on the focused item and move down |
| <kbd>Shift</kbd> + <kbd>Up</kbd> / <kbd>Shift</kbd> + <kbd>Down</kbd> | Extend selection upward or downward |
| <kbd>Ctrl</kbd> + <kbd>A</kbd> | Select all items in the current list |
| <kbd>Ctrl</kbd> + <kbd>B</kbd> | Toggle dual-pane mode |
| <kbd>Ctrl</kbd> + <kbd>1</kbd> / <kbd>Ctrl</kbd> + <kbd>2</kbd> | Focus the left or right pane |
| <kbd>Tab</kbd> | Switch the active pane |
| <kbd>F5</kbd> / <kbd>F6</kbd> | Copy or move selected items to the other pane |

## Viewers

Viewers share a common keyboard model for closing, searching, paging, and visual controls.

| Shortcut | What it does |
| --- | --- |
| <kbd>Esc</kbd> | Close the viewer |
| <kbd>D</kbd> | Download the current file |
| <kbd>Ctrl</kbd> + <kbd>F</kbd> | Search inside supported viewers |
| <kbd>F3</kbd> / <kbd>Shift</kbd> + <kbd>F3</kbd> | Jump to the next or previous search result |
| <kbd>Home</kbd> / <kbd>End</kbd> | Jump to the first or last page or item |
| <kbd>Page Up</kbd> / <kbd>Page Down</kbd> | Move to the previous or next page |
| <kbd>Left</kbd> / <kbd>Right</kbd> | Move to the previous or next page or item |
| <kbd>+</kbd> / <kbd>-</kbd> | Zoom in or out |
| <kbd>0</kbd> | Reset zoom |
| <kbd>R</kbd> / <kbd>Shift</kbd> + <kbd>R</kbd> | Rotate right or left |
| <kbd>F</kbd> | Toggle fullscreen |

Some viewer shortcuts depend on the file type. For example, search applies to searchable viewers, and page navigation applies to paged or gallery-style viewers.

## Markdown Editor

Markdown files build on the shared viewer shortcuts and add editor-specific formatting actions.

| Shortcut | What it does |
| --- | --- |
| <kbd>E</kbd> | Switch a Markdown file from viewing to editing |
| <kbd>Ctrl</kbd> + <kbd>S</kbd> | Save the current Markdown file |
| <kbd>Ctrl</kbd> + <kbd>F</kbd> | Search in the current Markdown content |
| <kbd>F3</kbd> / <kbd>Shift</kbd> + <kbd>F3</kbd> | Jump to the next or previous search result |
| <kbd>Ctrl</kbd> + <kbd>K</kbd> | Create a link |
| <kbd>Ctrl</kbd> + <kbd>Alt</kbd> + <kbd>T</kbd> | Insert a table |
| <kbd>Ctrl</kbd> + <kbd>Alt</kbd> + <kbd>H</kbd> | Insert a thematic break |
| <kbd>Ctrl</kbd> + <kbd>E</kbd> | Apply inline code |
| <kbd>Ctrl</kbd> + <kbd>Shift</kbd> + <kbd>E</kbd> | Insert a code block |
| <kbd>F</kbd> | Toggle fullscreen in the Markdown viewer |
| <kbd>Esc</kbd> | Close the Markdown viewer |

## When to Use the Built-In Shortcut Help

This page gives you the current high-value keyboard model by UI area.

Use the built-in shortcuts help when you want the live in-app list for your current screen, or when you want a quick reminder without leaving the file browser.
